--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-12  ">
-                    <img class="img-fluid" src="images/solar-crew.jpg">
+                    <img class="img-fluid" src="Solartech/Images/solar-crew.jpg">
                 </div>
             </div>
     </section>
