--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
 
                         <!--Controls-->
                         
+<!--                         <div class="controls-top">
+              <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i
+                  class="fa fa-chevron-left"></i></a>
+              <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
+                  class="fa fa-chevron-right"></i></a>
+            </div> -->
                         <!--/.Controls-->
 
                         <!--Indicators-->
